compiler/testData/checkerWithErrorTypes/quick/regressions/kt402.jet
namespace kt402

fun getTypeChecker() : fun(Any):Boolean {
  <!NO_RETURN_IN_FUNCTION_WITH_BLOCK_BODY!>{ (a : Any) => a is <!UNRESOLVED_REFERENCE!>T<!> }<!> // reports unsupported
}
fun f() : fun(Any) : Boolean {
  return { (a : Any) => a is String }
}